<resources>
    <string name="app_name">aster</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="email">email</string>
    <string name="password">Пароль</string>
    <string name="forgot_password">Забыл пароль</string>
    <string name="registration">Регистрация</string>
    <string name="sign_in">Зарегистрироваться</string>
    <string name="title_forum">Forum</string>
    <string name="title_category">Instruments</string>
    <string name="title_account">Account</string>
    <string name="title_messenger">Messenger</string>
    <string name="ressearch">Поиск</string>
    <string name="find">Найти</string>
    <string name="send">Отправить</string>

</resources>
