<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".intarface.loginActivities.signUp.SignUpActivity">

    <LinearLayout
        android:layout_marginHorizontal="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:gravity="center"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/sign_no_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="нет фото"
                android:gravity="center"
                android:layout_weight="1"
                android:layout_marginRight="25dp"/>

            <ImageView
                android:id="@+id/sign_photo"
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="10dp" />

            <Button
                android:id="@+id/sign_bth_add_photo"
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="Загрузить фото" />

        </LinearLayout>


        <EditText
            android:id="@+id/sign_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Имя"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/sign_surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:ems="10"
            android:hint="Фамилия"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/sign_tel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"

            android:ems="10"
            android:hint="Номер телефона"
            android:inputType="phone" />

        <EditText
            android:id="@+id/sign_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:ems="10"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/sign_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:focusableInTouchMode="true"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white"
            tools:ignore="InvalidImeActionId"
            android:ems="10"
            android:hint="@string/password" />

        <EditText
            android:id="@+id/sign_password_for_checking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:focusableInTouchMode="true"
            android:imeActionId="@+id/login"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="@android:color/white"
            tools:ignore="InvalidImeActionId"
            android:ems="10"
            android:hint="Пароль еще раз" />

    </LinearLayout>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="25dp"
        android:text="@string/sign_in" />


    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />

</LinearLayout>